--- a/playbooks/flow_playbooks/fetch-d42-smax-dvcs-compare.yaml
+++ b/playbooks/flow_playbooks/fetch-d42-smax-dvcs-compare.yaml
@@ -153,16 +153,26 @@
           {% endfor %}
           {{ result }}
 
-    - name: LastUpdated epoch değerlerini karşılaştırmalı olarak yazdır
+    - name: Ortak cihazlar ve güncellenecekler - epoch detaylı göster
       debug:
         msg: >-
+          {% set guncellenecekler = epoch_karsilastirma_listesi | selectattr('d42_epoch', '>', 'smax_epoch') | list %}
+          Tüm ortak cihazlar:
           {% for item in epoch_karsilastirma_listesi %}
-            Device: {{ item.name }}
-            Device42 last_updated: {{ item.d42_last_updated }}
-            Device42 epoch saniye: {{ item.d42_epoch }}
-            SMAX last_update_time: {{ item.smax_last_update_time }}
-            SMAX epoch saniye: {{ item.smax_epoch }}
-            ---
+          - name: {{ item.name }}
+            d42_last_updated: {{ item.d42_last_updated }}
+            d42_epoch: {{ item.d42_epoch }}
+            smax_last_update_time: {{ item.smax_last_update_time }}
+            smax_epoch: {{ item.smax_epoch }}
+          {% endfor %}
+
+          Güncellenecek cihazlar:
+          {% for item in guncellenecekler %}
+          - name: {{ item.name }}
+            d42_last_updated: {{ item.d42_last_updated }}
+            d42_epoch: {{ item.d42_epoch }}
+            smax_last_update_time: {{ item.smax_last_update_time }}
+            smax_epoch: {{ item.smax_epoch }}
           {% endfor %}
 
     - name: LastUpdated karşılaştırması yap ve güncellenecek cihazları belirle
