--- a/playbooks/flow_playbooks/fetch-d42-smax-dvcs-compare.yaml
+++ b/playbooks/flow_playbooks/fetch-d42-smax-dvcs-compare.yaml
@@ -151,22 +151,21 @@
           {%- endfor %}
           ]
 
-    - name: LastUpdated epoch değerlerini karşılaştırmalı olarak yazdır
-      debug:
-        msg: >-
-          {% for item in epoch_karsilastirma_listesi %}
-            Device: {{ item.name }}
-            Device42 last_updated: {{ item.d42_last_updated }}
-            Device42 epoch saniye: {{ item.d42_epoch }}
-            SMAX last_update_time: {{ item.smax_last_update_time }}
-            SMAX epoch saniye: {{ item.smax_epoch }}
-            ---
-          {% endfor %}
+    - name: Epoch değerlerini int'e çeviren yeni liste oluştur
+      set_fact:
+        epoch_karsilastirma_listesi_int: >-
+          {{ epoch_karsilastirma_listesi | map('combine', {
+            'd42_epoch': (item.d42_epoch | int),
+            'smax_epoch': (item.smax_epoch | int)
+          }) | list }}
+      loop: "{{ epoch_karsilastirma_listesi }}"
+      loop_control:
+        label: "{{ item.name }}"
 
     - name: LastUpdated karşılaştırması yap ve güncellenecek cihazları belirle
       set_fact:
         guncellenecek_cihazlar: >-
-          {{ epoch_karsilastirma_listesi | selectattr('d42_epoch', '>', 'smax_epoch') | map(attribute='d42_device') | list }}
+          {{ epoch_karsilastirma_listesi_int | selectattr('d42_epoch', '>', 'smax_epoch') | map(attribute='d42_device') | list }}
 
     - name: Sonuçları göster
       debug:
