update device tasks added

--- a/playbooks/flow_playbooks/fetch-d42-smax-dvcs-compare.yaml
+++ b/playbooks/flow_playbooks/fetch-d42-smax-dvcs-compare.yaml
@@ -205,3 +205,51 @@
           Güncellenecek Cihazlar (LastUpdated karşılaştırmalı):
           {{ guncellenecek_cihazlar | default([]) | selectattr('name', 'defined') | map(attribute='name') | list }}
 
+    - name: Güncellenecek cihazlar için update payloadlarını hazırla
+      set_fact:
+        update_payloads: >-
+          {% set smax_dict = dict(smax_devices_mapped | map(attribute='name') | zip(smax_devices_mapped)) %}
+          [{% for device in guncellenecek_cihazlar %}
+            {% set smax = smax_dict[device.name] %}
+            {
+              "entities": [{
+                "entity_type": "Device",
+                "properties": {
+                  "SubType": "Server",
+                  "MemorySize": "{{ (device.ram | default(device.memory | default(0))) | int }}",
+                  "BiosSerialNumber": "{{ device.serial_no | default('') }}",
+                  "BiosUUID": "{{ device.uuid | default('') }}",
+                  "Id": "{{ smax.device_id | default(smax.id | default(smax.Id | default(''))) }}",
+                  "HostName": "{{ device.name | default('') }}",
+                  "D42id_c": "{{ device.device_id | default(device.id) | default('') }}",
+                  "OsName": "{{ device.os | default('') }}",
+                  "IpAddresses": "{{ {'IpAddress': [ { 'IpValue': (device.ip_addresses | default([]) | first | default({})).ip | default(device.ip_address | default(device.primary_ip | default(device.ip | default('')))), 'IpType': '', 'AuthoritativeDNSName': '', 'RoutingDomain': '', 'GlobalId': '', 'Keep': '', 'Id': '' } ] } | to_json }}",
+                  "Cpus": "{{ {'Cpu': [ { 'CpuType': device.cpu_model | default(''), 'CpuVendor': device.cpu_vendor | default(''), 'CpuClockSpeed': (device.cpuspeed | default('') | string), 'CpuId': '1', 'CpuCoreNumber': device.cpu_count | default(device.cpus | default(1)), 'GlobalId': '', 'Keep': '', 'Id': '' } ] } | to_json }}",
+                  "DiskDevices": "{{ {'DiskDevice': (device.hdd_details is defined and device.hdd_details is not none and device.hdd_details|length > 0) | ternary((device.hdd_details | map('combine', {'DiskName': device.name | default(''), 'DiskSize': device.size | default(''), 'DiskModelName': 'scsi', 'DiskVendor': '', 'DiskType': 'virtual', 'GlobalId': '', 'Keep': '', 'Id': ''}) | list), [{'DiskName': (device.name | default('')) + '_disk', 'DiskSize': device.hddsize | default(device.disk_size | default(0)), 'DiskModelName': 'scsi', 'DiskVendor': '', 'DiskType': 'virtual', 'GlobalId': '', 'Keep': '', 'Id': ''}])} | to_json }}",
+                  "NetworkCards": "{{ {'NetworkCard': device.mac_addresses | default([]) | map('combine', {'MacAddress': '', 'NetworkCardSpeed': '', 'NetworkCardName': '', 'NetworkCardType': '', 'NetworkCardRole': '', 'GlobalId': '', 'Keep': '', 'Id': ''}) | list | to_json }}",
+                  "Vendor": "{{ device.manufacturer | default('') }}",
+                  "Model": "{{ device.hw_model | default('') }}",
+                  "Environment": "{{ device.service_level | default('') }}"
+                }
+              }],
+              "operation": "UPDATE"
+            }{% if not loop.last %},{% endif %}
+          {% endfor %}]
+
+    - name: Güncellenecek cihazları SMAX'e update olarak gönder
+      uri:
+        url: "{{ smax_api_url }}"
+        method: POST
+        headers:
+          Cookie: "SMAX_AUTH_TOKEN={{ smax_token }}"
+          Content-Type: "application/json"
+        body: "{{ item | to_json }}"
+        body_format: raw
+        status_code: 200,201,202
+        validate_certs: no
+        return_content: yes
+      loop: "{{ update_payloads }}"
+      loop_control:
+        label: "{{ item.entities[0].properties.HostName }}"
+      register: smax_update_responses
+
