--- a/playbooks/flow_playbooks/fetch-d42-smax-dvcs-compare.yaml
+++ b/playbooks/flow_playbooks/fetch-d42-smax-dvcs-compare.yaml
@@ -145,7 +145,7 @@
                 "d42_epoch": {{ (d42_device.last_updated | to_datetime('%Y-%m-%dT%H:%M:%S.%fZ')).timestamp() | int }},
                 "smax_last_update_time": "{{ smax_device.last_update_time }}",
                 "smax_epoch": {{ (smax_device.last_update_time | int // 1000) }},
-                "d42_device": {{ d42_device | to_json }}
+                "d42_device": {{ d42_device }}
               }{{ ',' if not loop.last else '' }}
             {%- endif %}
           {%- endfor %}
