--- a/playbooks/flow_playbooks/dbag-devices-to-awx-inventory.yaml
+++ b/playbooks/flow_playbooks/dbag-devices-to-awx-inventory.yaml
@@ -4,10 +4,10 @@
   gather_facts: false
   vars:
     device42_api_url: "https://device42.example.com/api/1.0/devices/all/"
-    device42_username: "kullanici_adi"
-    device42_password: "sifre"
+    device42_username: "admin"
+    device42_password: "Aa123456."
     awx_api_url: "https://awx.example.com/api/v2"
-    awx_token: "AWX_TOKENINIZ"
+    awx_token: "4536bvXZZS4G3yV0clW2MLGblBsZti"
     dbag_inventory_id: 5  # dbag inventory'nin id'si (AWX'den öğrenebilirsin)
   tasks:
     - name: Device42'dan cihazları çek
