--- a/playbooks/flow_playbooks/dbag-devices-to-awx-inventory.yaml
+++ b/playbooks/flow_playbooks/dbag-devices-to-awx-inventory.yaml
@@ -29,17 +29,23 @@
             | selectattr('custom_fields', 'defined')
             | selectattr('custom_fields', 'select', lambda fields: fields | selectattr('key', 'search', '^dbag', ignorecase=True) | list | length > 0)
             | map(attribute='ip_addresses')
-            | map('map', attribute='ip')  # ip_addresses içindeki ip'leri al
+            | map('map', attribute='ip')
             | sum(start=[])
             | unique
           }}
 
     - name: dbag inventory'sine host ekle
-      awx.awx.inventory_host:
-        hostname: "{{ item }}"
-        inventory: "{{ dbag_inventory_id }}"
-        controller_host: "{{ awx_api_url }}"
-        controller_oauthtoken: "{{ awx_token }}"
+      uri:
+        url: "{{ awx_api_url }}/inventories/{{ dbag_inventory_id }}/hosts/"
+        method: POST
+        headers:
+          Authorization: "Bearer {{ awx_token }}"
+          Content-Type: "application/json"
+        body_format: json
+        body:
+          name: "{{ item }}"
+          inventory: "{{ dbag_inventory_id }}"
+        status_code: [201, 409]  # 409 = zaten var
         validate_certs: no
       loop: "{{ dbag_hosts }}"
       when: dbag_hosts | length > 0 
